@@ -29,6 +29,12 @@ class EnumItem extends Item
 	
 	static final EnumField<Status> status = newEnumField(Status.class);
 	
+	static enum Single
+	{
+		single;
+	}
+	
+	static final EnumField<Single> single = newEnumField(Single.class).optional();
 	
 	/**
 
@@ -89,6 +95,26 @@ class EnumItem extends Item
 				com.exedio.cope.MandatoryViolationException
 	{
 		EnumItem.status.set(this,status);
+	}/**
+
+	 **
+	 * Returns the value of {@link #single}.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.get public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final Single getSingle()
+	{
+		return EnumItem.single.get(this);
+	}/**
+
+	 **
+	 * Sets a new value for {@link #single}.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.set public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final void setSingle(final Single single)
+	{
+		EnumItem.single.set(this,single);
 	}/**
 
 	 **
